fix(core): tweak spacing and margins on several components

--- a/lbh/components/lbh-back-link/_back-link.scss
+++ b/lbh/components/lbh-back-link/_back-link.scss
@@ -4,6 +4,7 @@
   .lbh-back-link {
     @include lbh-link-style-default;
     border: 0;
+    margin: 0;
 
     &:hover {
       border-bottom: 1px solid lbh-colour("lbh-link-hover");
